--- a/events_page.html
+++ b/events_page.html
@@ -91,35 +91,39 @@
     <!-- // FOOTER SECTION -->
     <footer class="footer-container">
       <div class="footer-box">
-        <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="footer-logo" />
 
         <div class="footer-nav-container">
           <div class="footer-nav">
-            <h5 class="footer-title">Discover</h5>
-            <a class="footer-link" href="shop_page.html">Shop</a>
-            <a class="footer-link" href="about_page.html">About</a>
+            <p class="footer-title">Discover</p>
+            <a class="footer-link" href="shop_page.html">Shop All</a>
+            <a class="footer-link" href="about_page.html">About Us</a>
             <a class="footer-link" href="events_page.html">Events</a>
             <a class="footer-link" href="style_guide_page.html">Style Guide</a>
-            <a class="footer-link" href="contact_page.html">Contact</a>
             <a class="footer-link" href="cart_page.html">Cart</a>
           </div>
 
           <div class="footer-nav">
-            <h5 class="footer-title">Guidelines</h5>
-            <a class="footer-link" href="#branding_idea">Branding Idea</a>
-            <a class="footer-link" href="#interactive_elements"
-              >Interactive Elements</a
-            >
-            <a class="footer-link" href="#text_elements">Text Elements</a>
-            <a class="footer-link" href="#combined_elements"
-              >Combined Elements</a
-            >
-            <a class="footer-link" href="#design_guidelines"
-              >Design Guidelines</a
-            >
-            <a class="footer-link" href="#citation">Citation</a>
+            <p class="footer-title">Help</p>            
+            <a class="footer-link" href="contact_page.html">Contact Us</a>
+            <a class="footer-link" href=#>Shipping & Return</a>
+            <a class="footer-link" href=#>Privacy Policy</a>
+            <a class="footer-link" href=#>Terms of Service</a>
+            <a class="footer-link" href=#>FAQ</a>
           </div>
         </div>
+
+        <div class="footer-newsletter">
+          <form method="post" action="#">
+            <label for="newsletter-email">Keep dreaming & get updates for our exclusive emails and offers</label>
+            <input type="text" id="newsletter-email" placeholder="Enter email address">
+            <input type="Submit" value="Submit" class="btn-secondary footer-btn">
+          </form>
+        </div>
+
+      </div>
+
+      <div>
+        <p class="copyright">© 2024  Nebula. All Rights Reserved.</p>
       </div>
     </footer>
   </body>
