Event Content Added, Code Validator
Only checked the code for Events, About, and Style Guide so far

--- a/about_page.html
+++ b/about_page.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>About Us</title>
 
-    <link href="css/main.css" rel="stylesheet" type="text/css"/>
-    <link href="css/grid.css" rel="stylesheet" type="text/css"/>
-    <link href="css/token.css" rel="stylesheet" type="text/css"/>
+    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <link href="css/grid.css" rel="stylesheet" type="text/css">
+    <link href="css/token.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
@@ -20,7 +20,7 @@
           <a class="nav-item" href="events_page.html">Events</a>
         </div>
         <a href="index.html">
-          <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="logo" />
+          <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="logo">
         </a>
         <div class="nav-flex">
           <a class="nav-item" href="style_guide_page.html">Style Guide</a>
@@ -61,7 +61,7 @@
           <p> Make up provides the opportunity to help people feel even more beautiful than they already are in their own skin. Together we’re building a safe, welcoming space in beauty and beyond. </p>
         </div>
         <div class="about-images">
-          <img src="img/about-us-models.png" alt="Image of 2 models representing Nebula's Inclusivity Motto" />
+          <img src="img/about-us-models.png" alt="Image of 2 models representing Nebula's Inclusivity Motto">
         </div>
       </div>
 
@@ -73,13 +73,14 @@
           <img src="img/cruelty-free-icon.png" alt = "An icon showing a bunny and a heart with text cruelty-free below">
           <img src="img/paraben-free-icon.png" alt = "An icon showing a crossed hazardous chemical with text paraben-free below">
           <img src="img/recyclable-icon.png" alt = "An icon showing circular economy arrows forming a heart with text recyclable below">
-      </section>    
-    </section>
+        </div>
+      </section> 
+    </section>   
 
     <!-- // FOOTER SECTION -->
-    <footer class="footer-container">
+   <footer class="footer-container">
       <div class="footer-box">
-        <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="footer-logo" />
+        <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="footer-logo">
 
         <div class="footer-nav-container">
           <div class="footer-nav">
@@ -94,15 +95,16 @@
 
           <div class="footer-nav">
             <h5 class="footer-title">Guidelines</h5>
-            <a class="footer-link" href="style_guide_page.html #branding_idea">Branding Idea</a>
-            <a class="footer-link" href="style_guide_page.html #interactive_elements"> Interactive Elements</a>
-            <a class="footer-link" href="style_guide_page.html #text_elements">Text Elements</a>
-            <a class="footer-link" href="style_guide_page.html #combined_elements">Combined Elements</a>
-            <a class="footer-link" href="style_guide_page.html #design_guidelines">Design Guidelines</a>
-            <a class="footer-link" href="style_guide_page.html #citation">Citation</a>
+            <a class="footer-link" href="style_guide_page.html#branding_idea">Branding Idea</a>
+            <a class="footer-link" href="style_guide_page.html#interactive_elements"> Interactive Elements</a>
+            <a class="footer-link" href="style_guide_page.html#text_elements">Text Elements</a>
+            <a class="footer-link" href="style_guide_page.html#combined_elements">Combined Elements</a>
+            <a class="footer-link" href="style_guide_page.html#design_guidelines">Design Guidelines</a>
+            <a class="footer-link" href="style_guide_page.html#citation">Citation</a>
           </div>
         </div>
       </div>
     </footer>
+
   </body>
 </html>
