--- a/events_page.html
+++ b/events_page.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Events Page</title>
 
-    <link href="css/main.css" rel="stylesheet" type="text/css"/>
-    <link href="css/grid.css" rel="stylesheet" type="text/css"/>
-    <link href="css/token.css" rel="stylesheet" type="text/css"/>
+    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <link href="css/grid.css" rel="stylesheet" type="text/css">
+    <link href="css/token.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
@@ -20,7 +20,7 @@
           <a class="nav-item" href="events_page.html">Events</a>
         </div>
         <a href="index.html">
-          <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="logo" />
+          <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="logo">
         </a>
         <div class="nav-flex">
           <a class="nav-item" href="style_guide_page.html">Style Guide</a>
@@ -65,7 +65,7 @@
       <h2> Past Events </h2>
       <div class="all-past-events">
         <div class="list-of-events">
-          <img src="img/placeholder2.png" alt="Banner image for Glam Night event"> 
+          <img src="img/glam-night-event.png" alt="Banner image for Glam Night event"> 
           <h4> 20th January 2024 </h4>
           <h3> Glam Night </h3>
           <p> Prepare to dazzle under the stars at Nebula's Galactic Glam Night! Join us for an evening of celestial beauty as we unveil our latest makeup collection with live demonstrations, personalized consultations, and exclusive giveaways.  </p>
@@ -73,7 +73,7 @@
         </div>
 
         <div class="list-of-events">
-          <img src="img/placeholder2.png" alt="Banner image for Stellar Workshop event"> 
+          <img src="img/stellar-workshop-event.png" alt="Banner image for Stellar Workshop event"> 
           <h4> 10th December 2023 </h4>
           <h3> Stellar Workshop </h3>
           <p> Dive into the colorful cosmos with Nebula's Stellar Shades Workshop! Discover the art of blending and contouring as our expert makeup artists guide you through a hands-on experience with our signature eyeshadow palettes. </p>
@@ -81,7 +81,7 @@
         </div>
 
         <div class="list-of-events">
-          <img src="img/placeholder2.png" alt="Banner image for Breakfast Brunch event"> 
+          <img src="img/beauty-brunch-event.png" alt="Banner image for Breakfast Brunch event"> 
           <h4> 5th September 2023 </h4>
           <h3> Breakfast Brunch </h3>
           <p> Join us for a morning of pampering and relaxation as we treat you to decadent refreshments, luxurious skincare rituals, and mini-makeovers featuring our bestselling products. This event is the perfect opportunity to recharge and rejuvenate your beauty routine. </p>
@@ -93,7 +93,7 @@
     <!-- // FOOTER SECTION -->
     <footer class="footer-container">
       <div class="footer-box">
-        <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="footer-logo" />
+        <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="footer-logo">
 
         <div class="footer-nav-container">
           <div class="footer-nav">
@@ -108,12 +108,12 @@
 
           <div class="footer-nav">
             <h5 class="footer-title">Guidelines</h5>
-            <a class="footer-link" href="style_guide_page.html #branding_idea">Branding Idea</a>
-            <a class="footer-link" href="style_guide_page.html #interactive_elements"> Interactive Elements</a>
-            <a class="footer-link" href="style_guide_page.html #text_elements">Text Elements</a>
-            <a class="footer-link" href="style_guide_page.html #combined_elements">Combined Elements</a>
-            <a class="footer-link" href="style_guide_page.html #design_guidelines">Design Guidelines</a>
-            <a class="footer-link" href="style_guide_page.html #citation">Citation</a>
+            <a class="footer-link" href="style_guide_page.html#branding_idea">Branding Idea</a>
+            <a class="footer-link" href="style_guide_page.html#interactive_elements"> Interactive Elements</a>
+            <a class="footer-link" href="style_guide_page.html#text_elements">Text Elements</a>
+            <a class="footer-link" href="style_guide_page.html#combined_elements">Combined Elements</a>
+            <a class="footer-link" href="style_guide_page.html#design_guidelines">Design Guidelines</a>
+            <a class="footer-link" href="style_guide_page.html#citation">Citation</a>
           </div>
         </div>
       </div>
