--- a/style_guide_page.html
+++ b/style_guide_page.html
@@ -2,14 +2,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Nebula Style Guide</title>
 
     <link href="css/main.css" rel="stylesheet" type="text/css">
-    <link href="css/grid.css" rel="stylesheet" type="text/css"/>
-    <link href="css/token.css" rel="stylesheet" type="text/css"/>
+    <link href="css/grid.css" rel="stylesheet" type="text/css">
+    <link href="css/token.css" rel="stylesheet" type="text/css">
 
   </head>
 
@@ -22,7 +22,7 @@
           <a class="nav-item" href="events_page.html">Events</a>
         </div>
         <a href="index.html">
-          <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="logo"/>
+          <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="logo">
         </a>
         <div class="nav-flex">
           <a class="nav-item" href="style_guide_page.html">Style Guide</a>
@@ -241,7 +241,7 @@
             <code>&lt;a href="https://figmashort.link/ncmeiH"&gt; &lt;img class="img img-product" src="img/essential-drip-lip-oil.jpg" alt="A Pink Essential Lip Drip Oil in the shade Lavender's Kiss"&gt; &lt;/a&gt;</code>
 
             <h4>Rendered element</h4>
-            <a href="https://figmashort.link/ncmeiH"> <img class="img img-product"src="img/essential-drip-lip-oil.png" alt="A Pink Essential Lip Drip Oil in the shade Lavender's Kiss"> </a>
+            <a href="https://figmashort.link/ncmeiH"> <img class="img img-product" src="img/essential-drip-lip-oil.png" alt="A Pink Essential Lip Drip Oil in the shade Lavender's Kiss"> </a>
           </section>
         </div>
       </section>
@@ -668,11 +668,11 @@
                   </div>
 
                   <div class="input-container">
-                    <label class=form-label for="address">Delivery</label>
+                    <label class=form-label> Delivery</label>
                     <input type="text" id="street" name="street" placeholder="Street Name" required>
                     <div class="input-three-column">
                         <input type="text" id="city" name="city" placeholder="City" required>
-                        <select name="provinceName" id="provinceName" placeholder="Province">
+                        <select name="provinceName" id="provinceName">
                         <option value=" "  selected disabled hidden>Province</option>
                         <option value="alberta">Alberta</option>
                         <option value="britishColumbia">British Columbia</option>
@@ -930,15 +930,29 @@
             <h3>Media References</h3>
   
             <div>
+              <h4> Fonts </h4>
+                <ul> 
+                  <li>GT Super Ds [Font]. Retrieved from <a class="in-text-link" href="https://www.grillitype.com/typeface/gt-super">https://www.grillitype.com/typeface/gt-super.</a><br></li>
+                  <li>Suisse Int'l [Font]. Retrieved from <a class="in-text-link" href="https://www.swisstypefaces.com/fonts/suisse/">https://www.swisstypefaces.com/fonts/suisse/</a><br></li>
+                </ul>
+              <h4> Images </h4>
               <ul>
-                <li>GT Super Ds [Font]. Retrieved from <a class="in-text-link" href="https://www.grillitype.com/typeface/gt-super">https://www.grillitype.com/typeface/gt-super.</a><br></li>
-                <li>Suisse Int'l [Font]. Retrieved from <a class="in-text-link" href="https://www.swisstypefaces.com/fonts/suisse/">https://www.swisstypefaces.com/fonts/suisse/</a><br></li>
-                <li>Essential Drip Lip Oil [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a><br></li>
-                <li>Highlighter Topper [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a><br></li>
-                <li>Lustrous Liquid Eyeshadow [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a><br></li>
                 <li>Blush & Lipstick [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Beauty Brunch Events [Image]. 2023. The Burrard. Retrieved from <a class="in-text-link" href=" https://theburrard.com/top-five-vancouver-brunch-spots//"> https://theburrard.com/top-five-vancouver-brunch-spots/</a><br></li>
+                <li>Essential Drip Lip Oil [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a><br></li>
+                <li>Glam Night Event [Image]. 2022. iStock. Retrieved from <a class="in-text-link" href="https://www.istockphoto.com/videos/parties/"> https://www.istockphoto.com/videos/parties</a><br></li>
+                <li>Highlighter Topper [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a><br></li>
+                <li>Landing Page Icons [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/pages/about">https://rembeauty.com/pages/about</a><br></li>
+                <li>Lustrous Liquid Eyeshadow [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a><br></li>
                 <li>Matte Lipstick [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a><br></li>
                 <li>Satin Matte Blush [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a><br></li>
+                <li>Stellar Workshop Event [Image]. 2023. Jack Morton. Retrieved from <a class="in-text-link" href="https://jackmorton.com/work/instagram-x-ariana-grande-x-r-e-m-beauty-experience/"> https://jackmorton.com/work/instagram-x-ariana-grande-x-r-e-m-beauty-experience/</a><br></li>
+              </ul>
+              <h4> Content Writing </h4>
+              <ul>
+                <li>Essential Drip Lip Oil Description and Ingredients [Content]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/products/essential-drip-lip-oil">https://rembeauty.com/products/essential-drip-lip-oil</a><br></li>
+                <li>Liquid Eyeshadow Description and Ingredients [Content]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/products/midnight-shadows-liquid-eyeshadow-lustrous?variant=42620758851847">https://rembeauty.com/products/midnight-shadows-liquid-eyeshadow-lustrous?variant=42620758851847</a><br></li>
+              </ul>
             </div>
   
           </section>
@@ -948,7 +962,7 @@
     <!-- // FOOTER SECTION -->
     <footer class="footer-container">
       <div class="footer-box">
-        <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="footer-logo" />
+        <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="footer-logo">
 
         <div class="footer-nav-container">
           <div class="footer-nav">
